--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h3 class="game-controls__title">Stats</h3>
             <ul class="game-controls__stats">
               <li>Solution length: <span id="stats-len">0</span></li>
-              <li>Execution time: <span id="stats-time">0</span>ms</li>
+              <li>Search time: <span id="stats-time">0</span>ms</li>
             </ul>
           </section>
         </div>
