Edit web front-end

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="An search algorithm to solve the 4x4 tile-sliding puzzle">
     <meta name="color-scheme" content="dark light">
-    <title>Document</title>
+    <title>15-puzzle solver</title>
+
     <link rel="stylesheet" href="styles.css">
     <script type="module" src="./js/main.js"></script>
   </head>
@@ -12,7 +14,7 @@
     <div class="container">
       <h1 class="title">15-puzzle solver</h1>
 
-      <main>
+      <main id="app">
         <div class="game-board">
           <div class="tile__container"><div data-num="1" class="tile appear"></div></div>
           <div class="tile__container"><div data-num="2" class="tile appear"></div></div>
