--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="An search algorithm to solve the 4x4 tile-sliding puzzle">
+    <meta name="description" content="A search algorithm to solve the 4x4 tile-sliding puzzle">
     <meta name="color-scheme" content="dark light">
     <title>15-puzzle solver</title>
 
