--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1 class="title">15-puzzle solver</h1>
 
       <main id="app">
-        <div class="game-board">
+        <div class="game-board app__component">
           <div class="tile__container"><div data-num="1" class="tile appear"></div></div>
           <div class="tile__container"><div data-num="2" class="tile appear"></div></div>
           <div class="tile__container"><div data-num="3" class="tile appear"></div></div>
@@ -34,7 +34,7 @@
           <div class="tile__container"></div>
         </div>
 
-        <div class="game-controls">
+        <div class="game-controls app__component">
           <section>
             <h3 class="game-controls__title">Edit board</h3>
 
